--- a/.pypirc
+++ b/.pypirc
@@ -4,11 +4,11 @@ index-servers =
   pypitest
 
 [pypi]
-repository=https://pypi.python.org/pypi
+repository=https://pypi.org/
 username=maria.terekhina
 password=tegelberg2013
 
 [pypitest]
-repository=https://testpypi.python.org/pypi
+repository=https://test.pypi.org/
 username=maria.terekhina
 password=tegelberg2013
